# rusty-magpie

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST.md
src/files/: mod.rs  scandir.rs
src/helper/: filter.rs
src/process/: mod.rs
src/yara/: mod.rs  scan.rs
